Correctly center nav elements on smaller screens

--- a/medor/static/medor/less/feed.less
+++ b/medor/static/medor/less/feed.less
@@ -264,7 +264,6 @@
         position: relative;
     }
     .menu li.sibling {
-        float:left;
         margin: 10px 15px;
     }
     .logo img {
